:ok_hand: : @APBielzinx Refatorando código